--- a/home.html
+++ b/home.html
@@ -1,12 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+        <head>
+            <meta charset="UTF-8">
+            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Home | Mansion luxe</title>
+            <link rel="stylesheet" href="./assets/css/styles.css">
+            <script src="/assets/js/menu.js" defer></script>
+        </head>
+
+
+        <body>
+<div class="cover-background">
+            <header class="primary-header flex">
+                <div>
+                    <img class="logo" src="./assets/img/insta.png" alt="logo-mansion-luxe">
+                </div>
+                
+         <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"> 
+             <span class="sr-only"></span> </button>
+
+                <nav>
+                    <ul id="primary-navigation" data-visible="false" class="primary-navigation flex" data-visible="false">
+                        <li class="active">
+                            <a href="home.html">
+                                <span aria-hidden="true">00</span>Home
+                            </a>
+
+                        </li>
+                        <li>
+                            <a href="home.html">
+                                <span aria-hidden="true">01</span>Products
+                            </a>
+
+                        </li>
+                        <li>
+                            <a href="home.html">
+                                <span aria-hidden="true">02</span>About
+                            </a>
+
+                        </li>
+                        <li>
+                            <a href="home.html">
+                                <span aria-hidden="true">03</span>Account
+                            </a>
+
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+
     
-</body>
-</html>
+        </body>
+
+
+ </html>
